--- a/12/016 From Validation Completed/04-task.html
+++ b/12/016 From Validation Completed/04-task.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 04</title><style>
+    <title>Task 04</title>
+    <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
@@ -15,12 +16,12 @@
             display: inline-block;
         }
 
-        #userList>li {
+        #userList > li {
             cursor: pointer;
             list-style: none;
         }
 
-        #userList>li:hover {
+        #userList > li:hover {
             background-color: orange;
         }
 
@@ -50,265 +51,309 @@
         .form-group input {
             width: 200px;
         }
+
+        .invalid {
+            border: red 1px solid;
+        }
+
+        .valid {
+            border: green 1px solid;
+        }
+
+        .error-msg {
+            display: inline;
+            color: red;
+        }
+
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 
 <body>
-    <ul id="userList">
-    </ul>
+<ul id="userList">
+</ul>
 
-    <form id="output">
-        <div class="form-group">
-            <label for="firstName">Имя</label>
-            <input type="text" name="firstName" id="firstName">
-        </div>
-        <div class="form-group">
-            <label for="lastName">Фамилия</label>
-            <input type="text" name="lastName" id="lastName">
-        </div>
-        <div class="form-group">
-            <label for="companyName">Компания</label>
-            <input type="text" name="companyName" id="companyName">
-        </div>
-        <div class="form-group">
-            <label for="balance">Баланс</label>
-            <input type="number" name="balance" id="balance">
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" name="email" id="email">
-        </div>
-        <div class="form-group">
-            <label for="age">Возраст</label>
-            <input type="number" name="age" id="age">
-        </div>
-        <input type="button" value="Save" id="saveButton">
-        <input type="reset" value="Reset">
-        <input type="button" value="Delete" id="deleteButton">
-    </form>
-    <script>
-        /*
-        Задание:
-        Добавьте валидацию данных со следующими правилами:
-        Все поля формы обязательные для ввода
-        balance - значение должно быть больше 1000
-        email - значение должно быть в формате электронного адреса
-        age - значение должно быть больше 18
+<form id="output">
+    <div class="form-group">
+        <label for="firstName">Имя</label>
+        <input type="text" name="firstName" id="firstName" required>
+        <span class="error-msg hidden" id="firstNameError">Error</span>
+    </div>
+    <div class="form-group">
+        <label for="lastName">Фамилия</label>
+        <input type="text" name="lastName" id="lastName" required>
+        <span class="error-msg hidden" id="lastNameError">Error</span>
+    </div>
+    <div class="form-group">
+        <label for="companyName">Компания</label>
+        <input type="text" name="companyName" id="companyName" required>
+        <span class="error-msg hidden" id="companyNameError">Error</span>
+    </div>
+    <div class="form-group">
+        <label for="balance">Баланс</label>
+        <input type="number" name="balance" id="balance" step="any" required min="1000">
+        <span class="error-msg hidden" id="balanceError">Error</span>
+    </div>
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" required>
+        <span class="error-msg hidden" id="emailError">Error</span>
+    </div>
+    <div class="form-group">
+        <label for="age">Возраст</label>
+        <input type="number" name="age" id="age" required min="18" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+        <span class="error-msg hidden" id="ageError">Error</span>
+    </div>
+    <input type="submit" value="Save" id="saveButton">
+    <input type="reset" value="Reset">
+    <input type="button" value="Delete" id="deleteButton">
+</form>
+<script>
+    /*
+    Задание:
+    Добавьте валидацию данных со следующими правилами:
+    Все поля формы обязательные для ввода
+    balance - значение должно быть больше 1000
+    email - значение должно быть в формате электронного адреса
+    age - значение должно быть больше 18
 
-        Для предотвращения перегрузки страницы отменяйте действие по умолчанию, обрабатывая 
-        событие submit.
-        */
+    Для предотвращения перегрузки страницы отменяйте действие по умолчанию, обрабатывая
+    событие submit.
+    */
 
-        let users = [
-            {
-                balance: '1250.89',
-                age: 24,
-                name: {
-                    first: 'Golden',
-                    last: 'Clements'
-                },
-                company: 'EWAVES',
-                email: 'golden.clements@ewaves.io'
+    let users = [
+        {
+            balance: '1250.89',
+            age: 24,
+            name: {
+                first: 'Golden',
+                last: 'Clements'
             },
-            {
-                balance: '3637.94',
-                age: 23,
-                name: {
-                    first: 'Francis',
-                    last: 'Hebert'
-                },
-                company: 'XPLOR',
-                email: 'francis.hebert@xplor.biz'
+            company: 'EWAVES',
+            email: 'golden.clements@ewaves.io'
+        },
+        {
+            balance: '3637.94',
+            age: 23,
+            name: {
+                first: 'Francis',
+                last: 'Hebert'
             },
-            {
-                balance: '1106.44',
-                age: 31,
-                name: {
-                    first: 'Hale',
-                    last: 'Cross'
-                },
-                company: 'EARTHPURE',
-                email: 'hale.cross@earthpure.us'
+            company: 'XPLOR',
+            email: 'francis.hebert@xplor.biz'
+        },
+        {
+            balance: '1106.44',
+            age: 31,
+            name: {
+                first: 'Hale',
+                last: 'Cross'
             },
-            {
-                balance: '2502.43',
-                age: 25,
-                name: {
-                    first: 'Delores',
-                    last: 'Sykes'
-                },
-                company: 'ASSITIA',
-                email: 'delores.sykes@assitia.com'
+            company: 'EARTHPURE',
+            email: 'hale.cross@earthpure.us'
+        },
+        {
+            balance: '2502.43',
+            age: 25,
+            name: {
+                first: 'Delores',
+                last: 'Sykes'
             },
-            {
-                balance: '3651.54',
-                age: 21,
-                name: {
-                    first: 'Ryan',
-                    last: 'Bolton'
-                },
-                company: 'MOLTONIC',
-                email: 'ryan.bolton@moltonic.biz'
+            company: 'ASSITIA',
+            email: 'delores.sykes@assitia.com'
+        },
+        {
+            balance: '3651.54',
+            age: 21,
+            name: {
+                first: 'Ryan',
+                last: 'Bolton'
             },
-            {
-                balance: '1345.79',
-                age: 21,
-                name: {
-                    first: 'Carey',
-                    last: 'Schwartz'
-                },
-                company: 'UXMOX',
-                email: 'carey.schwartz@uxmox.info'
+            company: 'MOLTONIC',
+            email: 'ryan.bolton@moltonic.biz'
+        },
+        {
+            balance: '1345.79',
+            age: 21,
+            name: {
+                first: 'Carey',
+                last: 'Schwartz'
             },
-            {
-                balance: '3261.11',
-                age: 30,
-                name: {
-                    first: 'Trevino',
-                    last: 'Mullins'
-                },
-                company: 'TERRASYS',
-                email: 'trevino.mullins@terrasys.org'
+            company: 'UXMOX',
+            email: 'carey.schwartz@uxmox.info'
+        },
+        {
+            balance: '3261.11',
+            age: 30,
+            name: {
+                first: 'Trevino',
+                last: 'Mullins'
             },
-            {
-                balance: '1659.17',
-                age: 20,
-                name: {
-                    first: 'Gilliam',
-                    last: 'Mendez'
-                },
-                company: 'ZENTHALL',
-                email: 'gilliam.mendez@zenthall.tv'
+            company: 'TERRASYS',
+            email: 'trevino.mullins@terrasys.org'
+        },
+        {
+            balance: '1659.17',
+            age: 20,
+            name: {
+                first: 'Gilliam',
+                last: 'Mendez'
             },
-            {
-                balance: '2340.54',
-                age: 32,
-                name: {
-                    first: 'Brewer',
-                    last: 'Vargas'
-                },
-                company: 'QIMONK',
-                email: 'brewer.vargas@qimonk.co.uk'
+            company: 'ZENTHALL',
+            email: 'gilliam.mendez@zenthall.tv'
+        },
+        {
+            balance: '2340.54',
+            age: 32,
+            name: {
+                first: 'Brewer',
+                last: 'Vargas'
             },
-            {
-                balance: '1736.91',
-                age: 24,
-                name: {
-                    first: 'Newman',
-                    last: 'Wynn'
-                },
-                company: 'VISALIA',
-                email: 'newman.wynn@visalia.name'
-            }
-        ];
+            company: 'QIMONK',
+            email: 'brewer.vargas@qimonk.co.uk'
+        },
+        {
+            balance: '1736.91',
+            age: 24,
+            name: {
+                first: 'Newman',
+                last: 'Wynn'
+            },
+            company: 'VISALIA',
+            email: 'newman.wynn@visalia.name'
+        }
+    ];
 
-        // класс для вывода информации в UL
-        class ListService {
-            selectedData;
-            data;
-            listElement;
+    // класс для вывода информации в UL
+    class ListService {
+        selectedData;
+        data;
+        listElement;
 
-            constructor(data, listElement, displayFn) {
-                this.data = data;
-                this.listElement = listElement;
+        constructor(data, listElement, displayFn) {
+            this.data = data;
+            this.listElement = listElement;
 
-                for (let index = 0; index < data.length; index++) {
-                    const currentData = data[index];
+            for (let index = 0; index < data.length; index++) {
+                const currentData = data[index];
 
-                    let li = document.createElement("li");
-                    li.textContent = displayFn(currentData);
-                    currentData.id = index; // для каждого пользователя указываем id, который совпадает с id в разметке
-                    li.dataset.id = index;
+                let li = document.createElement("li");
+                li.textContent = displayFn(currentData);
+                currentData.id = index; // для каждого пользователя указываем id, который совпадает с id в разметке
+                li.dataset.id = index;
 
-                    this.listElement.append(li);
-                }
-            }
-
-            select(id) {
-                this.selectedData = this.data.filter(x => x.id == id)[0];
-                this.deselectAll();
-
-                const index = this.data.indexOf(this.selectedData);
-                this.listElement.children[index].classList.add("selected");
-            }
-
-            deselectAll() {
-                for (let i = 0; i < this.listElement.children.length; i++) {
-                    const child = this.listElement.children[i];
-                    child.classList.remove("selected");
-                }
-            }
-
-            // удаление данных из разметки и массива
-            deleteSelectedItem() {
-                const index = this.data.indexOf(this.selectedData);
-                if (index != -1) {
-                    this.listElement.children[index].remove();
-                    this.data.splice(index, 1);
-                }
+                this.listElement.append(li);
             }
         }
 
-        // Класс для работы с формой, редактирующей информацию о пользователе
-        class UserFormService {
-            currentUser;
-            form;
+        select(id) {
+            this.selectedData = this.data.filter(x => x.id == id)[0];
+            this.deselectAll();
 
-            constructor(form) {
-                this.form = form;
-            }
+            const index = this.data.indexOf(this.selectedData);
+            this.listElement.children[index].classList.add("selected");
+        }
 
-            fillForm(user) {
-                this.currentUser = user;
-
-                this.form.firstName.value = user.name.first;
-                this.form.lastName.value = user.name.last;
-                this.form.companyName.value = user.company;
-                this.form.balance.value = user.balance;
-                this.form.email.value = user.email;
-                this.form.age.value = user.age;
-            }
-
-            saveForm() {
-                this.currentUser.name.first = this.form.firstName.value;
-                this.currentUser.name.last = this.form.lastName.value;
-                this.currentUser.company = this.form.companyName.value;
-                this.currentUser.balance = this.form.balance.value;
-                this.currentUser.email = this.form.email.value;
-                this.currentUser.age = this.form.age.value;
-            }
-
-            // очистка формы
-            resetForm() {
-                this.form.reset();
+        deselectAll() {
+            for (let i = 0; i < this.listElement.children.length; i++) {
+                const child = this.listElement.children[i];
+                child.classList.remove("selected");
             }
         }
 
-        let userList = document.querySelector("#userList");
-        let saveButton = document.querySelector("#saveButton");
-        let deleteButton = document.querySelector("#deleteButton");
+        // удаление данных из разметки и массива
+        deleteSelectedItem() {
+            const index = this.data.indexOf(this.selectedData);
+            if (index != -1) {
+                this.listElement.children[index].remove();
+                this.data.splice(index, 1);
+            }
+        }
+    }
 
-        let listService = new ListService(users, userList, x => x.name.first + " " + x.name.last);
-        let formService = new UserFormService(document.forms[0]);
+    // Класс для работы с формой, редактирующей информацию о пользователе
+    class UserFormService {
+        currentUser;
+        form;
 
-        userList.addEventListener("click", function (e) {
-            if (e.target.tagName != "LI") return;
+        constructor(form) {
+            this.form = form;
+        }
 
-            const userNumber = e.target.dataset.id;
-            listService.select(userNumber);
-            formService.fillForm(listService.selectedData);
-        });
+        fillForm(user) {
+            this.currentUser = user;
 
-        saveButton.addEventListener("click", function () {
-            formService.saveForm();
-        });
+            this.form.firstName.value = user.name.first;
+            this.form.lastName.value = user.name.last;
+            this.form.companyName.value = user.company;
+            this.form.balance.value = user.balance;
+            this.form.email.value = user.email;
+            this.form.age.value = user.age;
+        }
 
-        // удаляем и очищаем форму
-        deleteButton.addEventListener("click", function () {
-            listService.deleteSelectedItem();
-            formService.resetForm();
-        });
-    </script>
+        saveForm() {
+            this.currentUser.name.first = this.form.firstName.value;
+            this.currentUser.name.last = this.form.lastName.value;
+            this.currentUser.company = this.form.companyName.value;
+            this.currentUser.balance = this.form.balance.value;
+            this.currentUser.email = this.form.email.value;
+            this.currentUser.age = this.form.age.value;
+        }
+
+        // очистка формы
+        resetForm() {
+            this.form.reset();
+        }
+    }
+
+    let userList = document.querySelector("#userList");
+    let saveButton = document.querySelector("#saveButton");
+    let deleteButton = document.querySelector("#deleteButton");
+
+    let listService = new ListService(users, userList, x => x.name.first + " " + x.name.last);
+    let formService = new UserFormService(document.forms[0]);
+
+    userList.addEventListener("click", function (e) {
+        if (e.target.tagName != "LI") return;
+
+        const userNumber = e.target.dataset.id;
+        listService.select(userNumber);
+        formService.fillForm(listService.selectedData);
+    });
+
+    function validateElement(element, errorElementSelector) {
+        let errorElement = document.querySelector(errorElementSelector);
+
+        element.classList.remove("valid");
+        element.classList.remove("invalid");
+        errorElement.classList.add("hidden");
+
+        if (element.value.length > 0) {
+            element.classList.add("valid");
+            return true;
+        }
+        else {
+            element.classList.add("invalid");
+            errorElement.classList.remove("hidden");
+            return false;
+        }
+    }
+
+    formService.form.addEventListener("submit", (e) => {
+        e.preventDefault();
+    });
+    saveButton.addEventListener("click", function () {
+        formService.saveForm();
+    });
+
+    // удаляем и очищаем форму
+    deleteButton.addEventListener("click", function () {
+        listService.deleteSelectedItem();
+        formService.resetForm();
+    });
+</script>
 </body>
 
 </html>
