--- a/13/017 Cookies and Web Storage Complete/01-task.html
+++ b/13/017 Cookies and Web Storage Complete/01-task.html
@@ -21,11 +21,42 @@
             Добавьте возможность сохранить выбранный цвет страницы в cookies сроком на 1 неделю.
             Добавьте восстановление выбранного цвета из cookies, если они есть, после загрузки документа.
         */
-       
+
+        function setCookie(name, value) {
+            let encodedValue = encodeURIComponent(value);
+            document.cookie = `${name}=${encodedValue}`;
+        }
+        function getCookie(name) {
+            let cookie = document.cookie; // a=10; b=20; c=30
+            let pos = cookie.indexOf(name + "=");
+
+            // Если cookie с указанным именем найден, извлечь его значения.
+            if (pos != -1) {
+                let start = pos + name.length + 1;
+                let end = cookie.indexOf(";", start);
+
+                if (end == -1) {
+                    end = cookie.length;
+                }
+
+                // substring - вырезать значения из строки по индексам указанным в параметрах
+                let value = cookie.substring(start, end);
+
+                return decodeURIComponent(value);
+            }
+        }
+
+        let pageColor = getCookie("page-color");
+        if (pageColor) {
+            document.body.style.backgroundColor = pageColor;
+            document.querySelector(`input[value='${pageColor}']`).checked = true;
+        }
+
         document.querySelector("#saveButton").addEventListener("click", function () {
             const form = document.forms[0];
             let selectedColor = form.color.value;
             document.body.style.backgroundColor = selectedColor;
+            setCookie("page-color", selectedColor);
         });
     </script>
 </body>
