complete 01-task.html

--- a/14/018 Exception Handling Completed/01-task.html
+++ b/14/018 Exception Handling Completed/01-task.html
@@ -18,9 +18,13 @@
 
         let json = '{"name" : "Ivan", "age" = 20}';
 
-        let obj = JSON.parse(json);
-        console.log(obj.name);
-        console.log(obj.age);
+        try {
+            let obj = JSON.parse(json);
+            console.log(obj.name);
+            console.log(obj.age);
+        } catch (error) {
+            alert("Ошибка при прочтении JSON");
+        }
         
     </script>
 </body>
