--- a/14/018 Exception Handling Completed/02-task.html
+++ b/14/018 Exception Handling Completed/02-task.html
@@ -16,7 +16,9 @@
         */
 
         function sum(a, b) {
-            return a + b;
+            let ex = new Error("Отсутствует параметр");
+            if (a && b) return a + b;
+            else return ex;
         }
 
         try {
