--- a/14/018 Exception Handling Completed/03-task.html
+++ b/14/018 Exception Handling Completed/03-task.html
@@ -59,12 +59,16 @@
 
         let r1 = new Rect(10, 20);
 
-        r1.height = -10; // ошибка
-        r1.width = 30;
+        try {
+            r1.height = -10; // ошибка
+            r1.width = 30;
 
-        console.log("width " + r1.width);
-        console.log("height " + r1.height);
-        console.log("area " + r1.area);
+            console.log("width " + r1.width);
+            console.log("height " + r1.height);
+            console.log("area " + r1.area);
+        } catch (error) {
+            console.log(error.message);
+        }
     </script>
 </body>
 
