complete 05-task.html

--- a/14/018 Exception Handling Completed/05-task.html
+++ b/14/018 Exception Handling Completed/05-task.html
@@ -9,24 +9,27 @@
 </head>
 
 <body>
-    <script>
-        /*
-        Задание:
-        Внесите правки в код, не изменяя последовательность инструкций в функции operation сделайте так
-        чтобы строка "Освобождение ресурсов" выводилась каждый раз, когда запускалась функция operation.
-        */
-
-        function operation() {
+<script>
+    /*
+    Задание:
+    Внесите правки в код, не изменяя последовательность инструкций в функции operation сделайте так
+    чтобы строка "Освобождение ресурсов" выводилась каждый раз, когда запускалась функция operation.
+    */
+    function operation() {
+        try {
             console.log("Выделение ресурсов");
             return "Результат операции";
+        } finally {
             console.log("Освобождение ресурсов");
         }
+    }
 
-        operation();
-        operation();
-        operation();
+    operation();
+    operation();
+    operation();
 
-    </script>
+
+</script>
 </body>
 
 </html>
