--- a/15/019 Asynchronous Code. Promise. Completed/01-task.html
+++ b/15/019 Asynchronous Code. Promise. Completed/01-task.html
@@ -19,6 +19,14 @@
         по пути https://images-assets.nasa.gov/image/PIA16239/PIA16239~orig.jpg 
         при нажатии на кнопку Скачать, и вывод скаченного изображения в элемент #output
         */
+        document.querySelector("button").addEventListener("click", () => {
+            let url = "https://images-assets.nasa.gov/image/PIA16239/PIA16239~orig.jpg";
+            let output = document.querySelector("#output");
+
+            downloadImage(url,
+                image => output.append(image),
+                error => console.log(error.message));
+        });
        
         function downloadImage(url, success, error) {
             let image = new Image(500);
