--- a/15/019 Asynchronous Code. Promise. Completed/03-task.html
+++ b/15/019 Asynchronous Code. Promise. Completed/03-task.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button>Запустить</button>
+    <button id="start">Запустить</button>
     <script>
         /*
         Задание:
@@ -21,11 +21,19 @@
         кнопке Запустить, вызовите асинхронную операцию и, используя Promise, обработайте результат, отобразив его 
         через alert
         */
+        document.querySelector("#start").addEventListener("click", () => {
+            let promise = asyncOperation();
+            promise.then(result => alert(result));
+        });
 
         function asyncOperation() {
-            setTimeout(function () {
-                let result = Math.floor(Math.random() * 5001);
-            }, 2000)
+            let promise = new Promise((resolve, reject) => {
+                setTimeout(function () {
+                    let result = Math.floor(Math.random() * 5001);
+                    resolve(result);
+                }, 2000);
+            });
+            return promise;
         }
     </script>
 </body>
