--- a/15/019 Asynchronous Code. Promise. Completed/02-task.html
+++ b/15/019 Asynchronous Code. Promise. Completed/02-task.html
@@ -22,18 +22,14 @@
         через alert
         */
         document.querySelector("#start").addEventListener("click", () => {
-            let promise = asyncOperation();
-            promise.then(result => alert(result));
+            asyncOperation(result => alert(result));
         });
 
-        function asyncOperation() {
-            let promise = new Promise((resolve, reject) => {
-                setTimeout(function () {
-                    let result = Math.floor(Math.random() * 5001);
-                    resolve(result);
-                }, 2000);
-            });
-            return promise;
+        function asyncOperation(callback) {
+            setTimeout(function () {
+                let result = Math.floor(Math.random() * 5001);
+                callback(result);
+            }, 2000);
         }
     </script>
 </body>
