--- a/16/020 Network Requests Completed/01-task.html
+++ b/16/020 Network Requests Completed/01-task.html
@@ -23,14 +23,22 @@
 
         button1.addEventListener("click", function () {
             fetch(url)
-                .then(response => response.json())  
+                .then(response => {
+                    if (response.ok) {
+                        response.json();
+                    }
+                    else {
+                        console.log(response.status);
+                    }
+                })
                 .then(json => {
                     output.innerHTML = "";
                     output.innerHTML += "<br>id: " + json.id;
                     output.innerHTML += "<br>user id: " + json.userId;
                     output.innerHTML += "<br>title: " + json.title;
                     output.innerHTML += "<br>completed: " + json.completed;
-                });
+                })
+                .catch(error => console.log(error.message));
         });
     </script>
 </body>
