--- a/16/020 Network Requests Completed/01-task.html
+++ b/16/020 Network Requests Completed/01-task.html
@@ -25,7 +25,7 @@
             fetch(url)
                 .then(response => {
                     if (response.ok) {
-                        response.json();
+                        return response.json();
                     }
                     else {
                         console.log(response.status);
