--- a/16/020 Network Requests Completed/04-task.html
+++ b/16/020 Network Requests Completed/04-task.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 04</title>
+    <style>
+        table {
+            border: 3px solid black;
+        }
+        td {
+            border: 2px solid black;
+            padding: 5px;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,6 +24,38 @@
         Напишите сценарий, который выполняет GET запрос по адресу https://jsonplaceholder.typicode.com/todos
         И выводит содержимое ответа в виде таблицы.
         */
+
+        let url = "https://jsonplaceholder.typicode.com/todos";
+
+        fetch(url)
+            .then(response => {
+                if (response.ok) {
+                    return response.json();
+                }
+                else {
+                    console.log(response.status);
+                }
+            })
+            .then(json => renderTasks(json))
+            .catch(error => console.log(error.message));
+
+        function renderTasks(tasks) {
+            let table = document.createElement("table");
+            tasks.forEach(task => {
+                let row = document.createElement("tr");
+                let title = document.createElement("td");
+                let status = document.createElement("td");
+
+                title.textContent = task.title;
+                status.textContent = task.completed;
+
+                row.append(title);
+                row.append(status);
+
+                table.append(row);
+            })
+            document.body.append(table);
+        }
     </script>
 </body>
 
